# fastapi-restapi

./: .dockerignore  .env.dev  .env.test  .gitignore  .pre-commit-config.yaml  .pyclnignore.txt  Docker-compose.yaml  Dockerfile  README.md  app.db  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  report.html  requirements.txt  test.db
app/: .env.test  __init__.py  config.py  conftest.py  crud.py  database.py  hash_password_test.py  init_db.py  logger_setup.py  main.py  models.py  session.py  session_store.py  test_endpoints.py
app/api/: endpoints.py
app/auth/: __init__.py  auth.py  dependencies.py  jwt_handler.py  utils.py
app/domain/models/: comment.py  models.py  post.py  session.py  user.py
app/domain/schemas/: auth.py  comment.py  post.py  schemas.py  user.py
app/service/: base_service.py  comment_service.py  post_service.py  user_service.py
app/test/: _test.py  conftest.py  test_.py  test_endpoints.py  test_env.py
load_test/: locustfile.py
