[tool.poetry]
name = "my-fastapi-project"
version = "0.1.0"
description = ""
authors = ["kyungsoo Jung <wjdrudtn97@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
